k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: midlink-task-service
spec:
  selector:
    app: midlink-task
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
